# pam_pivcard

./: AUTHORS  ChangeLog  LICENSE  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
patches/: LICENSE.patch  engine_pkcs11-0.1.8-override_login.patch  engine_pkcs11-0.2.2-override_login.patch  libp11-0.4.4-override_login.patch  opensc-0.14.0-allowed_readers.patch
src/: Makefile.am  Makefile.guest  Makefile.in  common.h  pam_pivcard.8  pam_pivcard.c  pam_pivnet.8  pam_pivnet.c  pam_pivrmt.8  pam_pivrmt.c  pivclient.1  pivclient.c  pivd.1  pivd.c  pivforwarder.c  pivhelper.c
yubikey/: pivscript.sh
